--- a/.github/workflows/news_collect_test.yml
+++ b/.github/workflows/news_collect_test.yml
@@ -30,7 +30,7 @@ jobs:
           python-version: "3.9"
 
       - name: 필요한 패키지 설치
-        run: pip install requests, html, re
+        run: pip install requests
 
       - name: 뉴스 가져오기
         env:
